# mtg-printable-set-label-frontend

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  fly.toml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: deploy.yml  unittests.yml
config/: urls.py
config/settings/: base.py  development.py  production.py
fontconfig/: fonts.conf
frontend/: forms.py  utils.py  views.py
frontend/templates/frontend/: base.html
