[tool.poetry]
name = "frontend"
version = "0.0.21"
description = "Magic: the Gathering Printable Set Label Frontend"
readme = "README.md"
license = "MIT"
authors = ["Evgenii Vasilenko <gmrnsk@gmail.com>"]
maintainers = ["Evgenii Vasilenko <gmrnsk@gmail.com>"]
homepage = "https://mtg-printable-label.fly.dev/"
repository = "https://github.com/gofrolist/mtg-printable-set-label-frontend"

[tool.poetry.dependencies]
python = '^3.10'
crispy-bootstrap4 = "==2026.2"
django = "==5.2.11"
django-crispy-forms = "==2.5"
django-debug-toolbar = "==6.2.0"
django-environ = "==0.12.1"
gunicorn = "==25.0.3"
requests = ">=2,<3"
whitenoise = "==6.11.0"
mtglabels = {git = "https://github.com/gofrolist/mtg-printable-set-label-generator.git", tag = "v0.0.21"}

[tool.poetry.group.dev.dependencies]
black = "==26.1.0"
pre-commit = "==4.5.1"
reorder-python-imports = "==3.16.0"
tox = "==4.34.1"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"
